# python

./: .gitignore  .replit  CORRECT_FIX_APPLIED.txt  CSS_GRID_FIX_APPLIED.md  FINAL_FIX_SUMMARY.txt  FRONTEND_IMPROVEMENTS.md  GRID_FIX_VISUAL.txt  MINIMAL_FIX_APPLIED.txt  QUICK_START.md  README_SETUP.md  REFRESH_INSTRUCTIONS.txt  START_HERE.txt  STATUS.txt  SUCCESS_SUMMARY.md  UI_LAYOUT_GUIDE.txt  app.py  backtester.py  check_xampp.bat  config.py  market_data.py  models.py  pattern_detector.py  pyproject.toml  replit.md  setup_mysql.py  smc_analyzer.py  start_mysql.bat  start_sqlite.bat  start_with_mysql.bat  start_with_sqlite.bat  technical_indicators.py  test_app.py  trading_engine.py
attached_assets/: Pasted--COMPREHENSIVE-INTELLIGENT-TRADING-AI-SYSTEM-FULL-SPECI_1765125896047.txt
static/css/: style.css
static/js/: app.js
templates/: index.html
